--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Created by: Kenny Le
  * Created on: Feb 2022
- * This CSS file defines the style for index.html ICS2O-Unit1-04-HTML-CSS
+ * This CSS file defines the style for index.html ICS2O-Unit-1-04-HTML-CSS
 */
 
 body {
