change hex colour

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 */
 
 body {
-  background-color: #92BCEA;
+  background-color: #92bcea;
 }
 
 h1 {
@@ -15,5 +15,5 @@ h1 {
 }
 
 p {
-  background-color: #7A93AC;
+  background-color: #7a93ac;
 }
