--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  background-color: rgb(97 112 115);
+  background-color: rgb(97, 112, 115);
   color: hsl(222deg 17.9% 11%);
   padding: 20px;
   text-align: center;
