--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  background-color: rgb(216 228 255);
+  background-color: rgb(216, 228, 255);
   color: hsl(239deg 50% 47%);
   padding: 40px;
   text-align: center;
